--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 :root {
   /* Light Theme (Elegant Contrast) */
-  --bg: #F4F4F5;
+  --bg: #bcb8b8;
   --card: #FFFFFF;
   --text: #1A1A1A;
   --accent: #7F56D9;
@@ -49,7 +49,8 @@ body {
 
 button {
   background-color: var(--accent);
-  color: #fff;
+  color: #ffffff;
+  width: 600;
   border: none;
   padding: 0.5rem 1rem;
   border-radius: 6px;
